# template-finetuning

./: .gitignore  README.md  conda-env.yml
.claude/skills/logo/: make_logo.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  start_autotrain_ui.sh  start_jupyter.sh  start_mlflow.sh
.github/workflows/: ci.yml  codeql.yml
notes/: README.md  example_presentation.md
projects/autotrain_ui/: README.md  pyproject.toml  setup.sh  start_autotrain_ui.sh
projects/autotrain_ui/notebooks/: 01_autotrain_advanced.ipynb  02_autotrain_non_llm.ipynb
projects/axolotl_finetuning/: pyproject.toml
projects/axolotl_finetuning/notebooks/: 01_finetuning_with_axolotl.ipynb  axolotl_config.yaml
projects/huggingface_trl/: pyproject.toml
projects/huggingface_trl/notebooks/: 01_sft_with_trl.ipynb  02_trainer_non_llm.ipynb  03_classical_finetuning_har.ipynb
projects/unsloth_finetuning/: pyproject.toml
projects/unsloth_finetuning/notebooks/: 01_finetuning_with_unsloth.ipynb
