[project]
name = "autotrain_ui"
version = "0.1.0"
description = "HuggingFace Autotrain UI"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "autotrain-advanced",
    "datasets",
    "pandas",
    "deepspeed>=0.17.2",
    "ipython>=8.37.0",
    "nvidia-cuda-nvcc-cu12==12.1.*",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "xformers>=0.0.31.post1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

# "flash-attn" does not install due to CUDA_HOME variable not set
[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
