[project]
name = "huggingface_trl"
version = "0.1.0"
description = "HuggingFace Transformer Reinforcement Library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trl",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes",
    "transformers",
    "scipy",
    "evaluate",
    "pillow",
    "scikit-learn",
    "matplotlib",
    "lightning",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
